# aimeio-cardreader

./: .gitignore  build64.bat  meson.build  readme.md
src/: aimeio.c  aimeio.def  aimeio.h  aimetest.c  meson.build
src/scard/: scard.c  scard.h
